<?xml version="1.0"?>
<package format="3">
  <name>agv_robot_gazebo</name>
  <version>0.0.0</version>
  <description>AGV robot simulation and point cloud merging in Gazebo</description>
  <maintainer email="danurherlambang2611@gmail.com">Danur Herlambang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ros_gz_sim</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
